2006-10-05  fabian

    * Added a few hidden preferences for more user control. (use defaults write... to change
      these settings, see PreferencePanel.m)
    * Fixed building problem for the pre-tiger version.
      
2006-10-04  fabian

    * Made minimum tab width smaller when compact tab option is set.
    * Fixed a bug in [VT100Screen setString] that might be the cause of bug #1545337.
    * Added a copy-fille phase to include iTerm.string for adding localizations outside
      of the iTerm Framework.
    * Further fix for the wrapping bug.
    * Removed a few NSLog messages.
    * Changed version number to 0.9.0.
    
2006-10-04	dnedrow

	* Added plist entries to hook into Unsanity's Smart Crash Reporter.

2006-10-02  fabian

    * Changed the PTYTextView's cursor so that it looks more obvious with both black and white
      backgrounds.
    * Now selecting previous/next tab loops around.
    * Re-implemented the color-coding of tab state.
    * Reversed code for tab sizing. Now using a Safari-like behavior.

2006-09-30  fabian

    * Fixed a display bug when window size is set to larger than screen.
    
2006-09-29  fabian

    * Removed excessive NSLog info
    * Fixed a possible deadlock during resizing.
    * Fixed a bug in [VT100Screen resizeWidth:height:].
    * Fixed a bug in [VT100Screen setTab].
    * Added support for xterm's raise/lower window sequencies.
    * Cleaned outdated variables of VT100Screen.
    
2006-09-27  fabian

    * Reorganized Preference panel's UI
    * Updated websites
    * Incorporated the patch by Joseph Ates.
    
2006-09-26  fabian

    * Fixed a trackRect bug of our textview. Now the focus-follow-mouse is working again.
    * Fixed a bug of ignoring "Enable Growl" option.
    * Changed cursor to I-Beam.
    
2006-09-25  fabian

    * Added an option to disable close tab button and tab number.
    * Fixed support for xterm's resize CSI sequence support.
    
2006-09-24  fabian
